Implement kind-derived editor mode
